# va_args_iterators

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.org  enum.h  inspect_macro_expansion  pp_iter.h  pp_iterators.rb  regenerate  regenerate.bat  vaiter64.h  vaiter_generator.rb
test/: pp_iter_test.cpp
